Implement remaining endpoints for user, remove logout endpoint
