# service/UserService.js
@@ -7,48 +7,36 @@ const bcrypt = require('bcrypt');
 const jwt = require('jsonwebtoken');
 
 /**
- * Adds books to the user's cart
+ * Adds book to the user's cart
  *
- * bookID Long ID of the book to add to the cart
+ * body AddToCartRequest bookID and number of copies to add to the cart (optional)
  * returns Cart
  **/
-exports.addBooksToCart = function(bookID) {
+exports.addBookToCart = function(body, userID) {
   return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = {
-  "booklist" : [ {
-    "name" : "Il sentiero",
-    "id" : 0,
-    "authors" : [ {
-      "firstName" : "firstName",
-      "lastName" : "",
-      "id" : 0
-    }, {
-      "firstName" : "firstName",
-      "lastName" : "",
-      "id" : 0
-    } ]
-  }, {
-    "name" : "Il sentiero",
-    "id" : 0,
-    "authors" : [ {
-      "firstName" : "firstName",
-      "lastName" : "",
-      "id" : 0
-    }, {
-      "firstName" : "firstName",
-      "lastName" : "",
-      "id" : 0
-    } ]
-  } ],
-  "total_price" : 6,
-  "id" : 0
-};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
+    db.select().from('Book').where('bookID', body.bookID).then(function (book) {
+      if (book.length <= 0) {
+        reject({actualResponse: 'Book not found', status: 404});
+      }
+      else {
+        db.select().from('Cart').where({userID: userID, bookID: body.bookID}).then(function (bookInCart) {
+          if (bookInCart.length <= 0) {
+            db('Cart').insert([{userID: userID, bookID: body.bookID, copies: body.copies}]).then(function () {
+              db.select('bookID', 'copies').from('Cart').where('userID', userID).then(function (result) {
+                resolve({actualResponse: result, status: 201});
+              })
+            })
+          }
+          else {
+            db('Cart').update({copies: bookInCart[0].copies + body.copies}).where({userID: userID, bookID: body.bookID}).then(function () {
+              db.select('bookID', 'copies').from('Cart').where('userID', userID).then(function (result) {
+                resolve({actualResponse: result, status: 201});
+              })
+            })
+          }
+        })
+      }
+    });
   });
 }
 
@@ -63,13 +51,13 @@ exports.addBooksToCart = function(bookID) {
 exports.createUser = function(body) {
   return new Promise(function(resolve, reject) {
     db.select().from('User').where('username', body.username).then(function (user) {
-      if (user.length>0) return reject('User already registered');
+      if (user.length>0) return reject({actualResponse: 'User already registered', status: 400});
       bcrypt.genSalt(10, function(err, salt) {
         bcrypt.hash(body.password, salt, function(err, hashed) {
           db('User').insert([{username: body.username, firstName: body.firstName, lastName: body.lastName, email: body.email, password_hashed: hashed, phone: body.phone}]).then(function () {
             db.select('userID', 'username').from('User').where('username', body.username).then(function(registered) {
-              resolve(registered);
-          })
+              resolve({actualResponse: registered, status: 201});
+            })
           })
         })
       })
@@ -84,23 +72,13 @@ exports.createUser = function(body) {
  *
  * returns UserWithID
  **/
-exports.deleteUser = function() {
+exports.deleteUser = function(userID) {
   return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = {
-  "firstName" : "firstName",
-  "lastName" : "lastName",
-  "password" : "password",
-  "phone" : "phone",
-  "id" : 0,
-  "email" : "email",
-  "username" : "username"
-};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
+    db.select('userID','username','firstName','lastName','email','phone').from('User').where('userID', userID).then(function (user) {
+      db('User').del().where('userID', userID).then(function () {
+        resolve({actualResponse: user, status: 200})
+      })
+    })
   });
 }
 
@@ -108,7 +86,7 @@ exports.deleteUser = function() {
 /**
  * Returns user data
  *
- * returns User
+ * returns UserWithoutPass
  **/
 exports.getUser = function(userID) {
   return new Promise(function(resolve, reject) {
@@ -124,43 +102,11 @@ exports.getUser = function(userID) {
  *
  * returns Cart
  **/
-exports.getUserCart = function() {
+exports.getUserCart = function(userID) {
   return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = {
-  "booklist" : [ {
-    "name" : "Il sentiero",
-    "id" : 0,
-    "authors" : [ {
-      "firstName" : "firstName",
-      "lastName" : "",
-      "id" : 0
-    }, {
-      "firstName" : "firstName",
-      "lastName" : "",
-      "id" : 0
-    } ]
-  }, {
-    "name" : "Il sentiero",
-    "id" : 0,
-    "authors" : [ {
-      "firstName" : "firstName",
-      "lastName" : "",
-      "id" : 0
-    }, {
-      "firstName" : "firstName",
-      "lastName" : "",
-      "id" : 0
-    } ]
-  } ],
-  "total_price" : 6,
-  "id" : 0
-};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
+    db.select('bookID', 'copies').from('Cart').where('userID', userID).then(function (books) {
+      resolve(books);
+    })
   });
 }
 
@@ -175,27 +121,15 @@ exports.getUserCart = function() {
 exports.loginUser = function(username,password) {
   return new Promise(function(resolve, reject) {
     db.select().from('User').where("username", username).then(function (user) {
-      if (user.length<=0) reject('Invalid username or password');
+      if (user.length<=0) reject({actualResponse: 'Invalid username or password', status: 400});
       else bcrypt.compare(password, user[0].password_hashed, function (err, isValid) {
-        if (!isValid) reject('Invalid username or password');
+        if (!isValid) reject({actualResponse: 'Invalid username or password', status: 400});
         else {
           const token = jwt.sign({userID: user[0].userID}, 'jwtPrivateKey');
-          resolve(token);
+          resolve({actualResponse: token, status: 201});
         }
       })
     })
-  });
-}
-
-
-/**
- * Logs out current logged in user session
- *
- * no response value expected for this operation
- **/
-exports.logoutUser = function() {
-  return new Promise(function(resolve, reject) {
-    resolve();
   });
 }
 
@@ -205,43 +139,24 @@ exports.logoutUser = function() {
  *
  * returns Cart
  **/
-exports.userCartBuyBooksPOST = function() {
+exports.userCartBuyBooksPOST = function(userID) {
   return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = {
-  "booklist" : [ {
-    "name" : "Il sentiero",
-    "id" : 0,
-    "authors" : [ {
-      "firstName" : "firstName",
-      "lastName" : "",
-      "id" : 0
-    }, {
-      "firstName" : "firstName",
-      "lastName" : "",
-      "id" : 0
-    } ]
-  }, {
-    "name" : "Il sentiero",
-    "id" : 0,
-    "authors" : [ {
-      "firstName" : "firstName",
-      "lastName" : "",
-      "id" : 0
-    }, {
-      "firstName" : "firstName",
-      "lastName" : "",
-      "id" : 0
-    } ]
-  } ],
-  "total_price" : 6,
-  "id" : 0
-};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
+    db.select('bookID', 'copies').from('Cart').where('userID', userID).then(function (books) {
+      db('Order').insert([{userID: userID}]).returning('orderID').then(function (orderID) {
+        var numberOfOrderedBooks = books.length;
+        var booksArray = [];
+        for (var i = 0; i < numberOfOrderedBooks; i++) {
+          booksArray[i] = {orderID: orderID[0], bookID: books[i].bookID, copies: books[i].copies};
+        }
+        db('OrderBook').insert(booksArray).then(function () {
+          db.select('bookID', 'copies').from('OrderBook').where('orderID', orderID[0]).then(function (order) {
+            db('Cart').del().where('userID', userID).then(function () {
+              resolve({actualResponse: order, status: 201});
+            })
+          })
+        });
+      })
+    })
   });
 }
 
@@ -252,43 +167,20 @@ exports.userCartBuyBooksPOST = function() {
  * bookID Long ID of the book to delete from the cart
  * returns Cart
  **/
-exports.userCartDeleteBookBookIDDELETE = function(bookID) {
+exports.userCartDeleteBookBookIDDELETE = function(bookID, userID) {
   return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = {
-  "booklist" : [ {
-    "name" : "Il sentiero",
-    "id" : 0,
-    "authors" : [ {
-      "firstName" : "firstName",
-      "lastName" : "",
-      "id" : 0
-    }, {
-      "firstName" : "firstName",
-      "lastName" : "",
-      "id" : 0
-    } ]
-  }, {
-    "name" : "Il sentiero",
-    "id" : 0,
-    "authors" : [ {
-      "firstName" : "firstName",
-      "lastName" : "",
-      "id" : 0
-    }, {
-      "firstName" : "firstName",
-      "lastName" : "",
-      "id" : 0
-    } ]
-  } ],
-  "total_price" : 6,
-  "id" : 0
-};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
+    db.select().from('Cart').where({userID: userID, bookID: bookID}).then(function (books) {
+      if (books.length <= 0) {
+        reject({actualResponse: "Book not found", status: 404});
+      }
+      else {
+        db('Cart').del().where({userID: userID, bookID: bookID}).then(function () {
+          db.select('bookID', 'copies').from('Cart').where('userID', userID).then(function (cart) {
+            resolve({actualResponse: cart, status: 200})
+          })
+        })
+      }
+    })
   });
 }
 
